added raineer's changes to products inquiry

--- a/Products/projectStyle.css
+++ b/Products/projectStyle.css
@@ -1,6 +1,6 @@
 /* Style the body */
 body {
-    font-family: a;
+    font-family: 'Work Sans', sans-serif;
     margin: 0;
     font-size: 18px;
     }
@@ -174,7 +174,7 @@ div {
     }
 
 img.drone_del {
-    width: 50%;
+    width: 75%;
     vertical-align: bottom;
     }
 
@@ -257,14 +257,19 @@ img.drone_spec {
     
 }
 
-input[type=text], select, textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */  
-  border: 1px solid #ccc; /* Gray border */
+#inquiry {
+    margin: 0;
+    line-height: 0;
+}
+
+input[type=text], textarea {
+  width: 100%; 
+  padding: 12px; 
+  border: 1px solid #ccc; 
   border-radius: 4px; /* Rounded borders */
   box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
+  margin-top: 6px; 
+  margin-bottom: 16px; 
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
@@ -288,4 +293,19 @@ input[type=submit]:hover {
   padding: 20px;
 }
 
-
+.pic {
+width: 50%;
+height: 50%;
+border: 2px solid #2b468b;
+}
+.Employees {
+align-items: center;
+display: flex;
+flex-direction: column;
+}
+.about_company { 
+align-items: center;
+display: flex;
+flex-direction: column;
+margin: 20px;
+}
